--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vblog-web",
+  "name": "wblog-web",
   "version": "1.0.0",
-  "description": "vblog-web",
-  "author": "雪山飞狐",
+  "description": "wblog-web",
+  "author": "wblog",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -14,6 +14,10 @@
     "element-ui": "^2.0.10",
     "lodash": "^4.17.4",
     "mavon-editor": "^2.4.16",
+    "muse-ui": "^3.0.1",
+    "muse-ui-carbon-theme": "^0.1.0",
+    "muse-ui-message": "^0.2.1",
+    "muse-ui-toast": "^0.3.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
